--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -330,6 +330,9 @@ img{
 .work__text{
   margin-bottom: var(--mb-2);
 }
+.work__img__container{
+  row-gap: 2rem;
+}
 .work__img{
   box-shadow: 0 4px 25px rgba(14,36,49,.15);
   border-radius: .5rem;
@@ -341,6 +344,18 @@ img{
 }
 .work__img img:hover{
   transform: scale(1.1);
+}
+
+/* ===== PROJECTS =====*/
+.projects__container{
+  row-gap: 2rem;
+  text-align: center;
+}
+.projects__subtitle{
+  margin-bottom: var(--mb-2);
+}
+.projects__text{
+  margin-bottom: var(--mb-4);
 }
 
 /* ===== CONTACT =====*/
@@ -440,7 +455,7 @@ img{
     bottom: 15%;
   }
 
-  .about__container, .skills__container{
+  .about__container, .skills__container, .work__container, .projects__container{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     text-align: initial;
@@ -448,10 +463,10 @@ img{
   .about__img img{
     width: 300px;
   }
-  .work__container{
-    grid-template-columns: repeat(2,1fr);
-    align-items: center;
-    text-align: initial;
+  .work__img__container{
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2,1fr);
+    column-gap: 2rem;
   }
   .contact__form{
     width: 360px;
