--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -219,11 +219,12 @@ body.dark__theme {
 }
 .home__data {
   align-self: center;
-  margin-bottom: var(--mb-6);
+  margin-top: var(--mb-6);
+  margin-bottom: var(--mb-3);
 }
 .home__title {
   font-size: var(--big-font-size);
-  margin-bottom: var(--mb-5);
+  margin-bottom: var(--mb-3);
 }
 .home__title-color {
   color: var(--first-color);
@@ -282,12 +283,6 @@ body.dark__theme {
   row-gap: 2rem;
   text-align: center;
 }
-.skills__subtitle {
-  margin-bottom: var(--mb-2);
-}
-.skills__text {
-  margin-bottom: var(--mb-4);
-}
 .skills__data {
   display: flex;
   justify-content: space-between;
@@ -295,7 +290,7 @@ body.dark__theme {
   position: relative;
   font-weight: var(--font-semi);
   padding: 0.5rem 1rem;
-  margin-bottom: var(--mb-4);
+  margin-bottom: var(--mb-2);
   border-radius: 0.5rem;
   box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
   text-align: left;
@@ -335,41 +330,14 @@ body.dark__theme {
   border-radius: 0.5rem;
 }
 
-/* ===== WORK =====*/
-.work__container {
-  row-gap: 2rem;
-}
-.work__subtitle {
-  margin-bottom: var(--mb-2);
-}
-.work__text {
-  margin-bottom: var(--mb-2);
-}
-.work__img__container {
-  row-gap: 2rem;
-}
-.work__img {
-  box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
-.work__img img {
-  transition: 1s;
-  cursor: pointer;
-}
-.work__img img:hover {
-  transform: scale(1.1);
-}
-
 /* ===== PROJECTS =====*/
 .projects__container {
-  row-gap: 2rem;
+  margin-top: var(--mb-2);
 }
-.projects__subtitle {
-  margin-bottom: var(--mb-2);
-}
-.projects__text {
-  margin-bottom: var(--mb-4);
+
+/* ===== WORK =====*/
+.work__container {
+  margin-top: var(--mb-2);
 }
 
 /* ===== CONTACT =====*/
@@ -418,13 +386,6 @@ body.dark__theme {
   body {
     margin: 0;
   }
-  .section {
-    padding-top: 4rem;
-    padding-bottom: 3rem;
-  }
-  .section-title {
-    margin-bottom: var(--mb-6);
-  }
   .section-title::after {
     width: 80px;
     top: 3rem;
@@ -459,6 +420,11 @@ body.dark__theme {
   }
   .home__data {
     align-self: flex-end;
+    margin-top: 0;
+    margin-bottom: var(--mb-6);
+  }
+  .home__title {
+    margin-bottom: var(--mb-5);
   }
   .home__social {
     padding-top: 0;
