--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@
   --first-color: #4285f4;
   --second-color: #0e2431;
   --container-color: #ffffff;
+  --link-color: #005a9c;
 }
 
 /*===== Fuente y tipografia =====*/
@@ -77,7 +78,7 @@ ul {
 }
 a {
   text-decoration: none;
-  color: #005a9c;
+  color: var(--link-color);
 }
 img {
   max-width: 100%;
@@ -264,7 +265,7 @@ body.dark__theme {
   border-radius: 0.5rem;
 }
 .button:hover {
-  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
+  background-color: var(--link-color);
 }
 
 /* ===== ABOUT =====*/
