--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -60,6 +60,7 @@ body {
 }
 h1,
 h2,
+h3,
 p {
   margin: 0;
 }
@@ -138,14 +139,16 @@ body.dark__theme {
 }
 
 /*===== LAYOUT =====*/
-.bd-grid {
+.bd-container {
   max-width: 1024px;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-column-gap: 2rem;
   width: calc(100% - 2rem);
   margin-left: var(--mb-2);
   margin-right: var(--mb-2);
+}
+.bd-grid {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 2rem;
 }
 .l-header {
   width: 100%;
@@ -275,7 +278,6 @@ body.dark__theme {
 /* ===== ABOUT =====*/
 .about__container {
   row-gap: 2rem;
-  text-align: center;
 }
 .about__subtitle {
   margin-bottom: var(--mb-2);
@@ -291,7 +293,6 @@ body.dark__theme {
 /* ===== SKILLS =====*/
 .skills__container {
   row-gap: 2rem;
-  text-align: center;
 }
 .skills__data {
   display: flex;
@@ -340,34 +341,10 @@ body.dark__theme {
   border-radius: 0.5rem;
 }
 
-/* ===== PROJECTS =====*/
-.projects__container {
-  margin-top: var(--mb-2);
-}
-
-/* ===== WORK =====*/
+/* ===== PROJECTS & WORK =====*/
+.project__container,
 .work__container {
-  margin-top: var(--mb-2);
-}
-
-/* ===== CONTACT =====*/
-.contact__input {
-  width: 100%;
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-semi);
-  padding: 1rem;
-  border-radius: 0.5rem;
-  border: 1.5px solid var(--second-color);
-  outline: none;
-  margin-bottom: var(--mb-4);
-}
-.contact__button {
-  display: block;
-  border: none;
-  outline: none;
-  font-size: var(--normal-font-size);
-  cursor: pointer;
-  margin-left: auto;
+  margin-top: var(--mb-4);
 }
 
 /* ===== FOOTER =====*/
@@ -455,9 +432,7 @@ body.dark__theme {
   }
 
   .about__container,
-  .skills__container,
-  .work__container,
-  .projects__container {
+  .skills__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     text-align: initial;
@@ -465,25 +440,19 @@ body.dark__theme {
   .about__img img {
     width: 300px;
   }
-  .work__img__container {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    column-gap: 2rem;
-  }
-  .contact__form {
-    width: 360px;
-  }
-  .contact__container {
-    justify-items: center;
-  }
 }
 
 @media screen and (min-width: 1024px) {
-  .bd-grid {
+  .bd-container {
     margin-left: auto;
     margin-right: auto;
   }
   .home__img {
     right: 10%;
+  }
+  .project__text,
+  .work__text {
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 }
