--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@
   /*===== Fuente y tipografia =====*/
   --body-font: "Poppins", sans-serif;
   --big-font-size: 2rem;
-  --h2-font-size: 1.25rem;
+  --h2-font-size: 1.5rem;
   --normal-font-size: 0.938rem;
   /*===== Margenes =====*/
   --mb-1: 0.5rem;
@@ -130,7 +130,7 @@ body.dark__theme {
   left: 0;
   right: 0;
   margin: auto;
-  top: 2rem;
+  top: 2.5rem;
   background-color: var(--first-color);
 }
 .section {
@@ -281,6 +281,7 @@ body.dark__theme {
 }
 .about__subtitle {
   margin-bottom: var(--mb-2);
+  text-align: center;
 }
 .about__img {
   justify-self: center;
@@ -293,6 +294,9 @@ body.dark__theme {
 /* ===== SKILLS =====*/
 .skills__container {
   row-gap: 2rem;
+}
+.skills__subtitle {
+  text-align: center;
 }
 .skills__data {
   display: flex;
@@ -439,6 +443,11 @@ body.dark__theme {
   }
   .about__img img {
     width: 300px;
+  }
+
+  .about__subtitle,
+  .skills__subtitle {
+    text-align: initial;
   }
 }
 
