--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@
   /*===== Fuente y tipografia =====*/
   --body-font: "Poppins", sans-serif;
   --big-font-size: 2rem;
-  --h2-font-size: 1.5rem;
+  --medium-font-size: 1.5rem;
   --normal-font-size: 0.938rem;
   /*===== Margenes =====*/
   --mb-1: 0.5rem;
@@ -37,7 +37,7 @@
 @media screen and (min-width: 768px) {
   :root {
     --big-font-size: 3.5rem;
-    --h2-font-size: 2rem;
+    --medium-font-size: 2rem;
     --normal-font-size: 1rem;
   }
 }
@@ -116,7 +116,7 @@ body.dark__theme {
 /*===== CLASS CSS ===== */
 .section-title {
   position: relative;
-  font-size: var(--h2-font-size);
+  font-size: var(--medium-font-size);
   color: var(--first-color);
   margin-top: var(--mb-2);
   margin-bottom: var(--mb-4);
@@ -235,12 +235,18 @@ body.dark__theme {
   margin-top: var(--mb-6);
   margin-bottom: var(--mb-3);
 }
+.home__intro {
+  margin-bottom: var(--mb-3);
+}
 .home__title {
   font-size: var(--big-font-size);
-  margin-bottom: var(--mb-3);
 }
 .home__title-color {
   color: var(--first-color);
+}
+.home__content {
+  font-weight: var(--font-semi);
+  font-size: var(--medium-font-size);
 }
 .home__social {
   display: flex;
@@ -417,7 +423,7 @@ body.dark__theme {
     margin-top: 0;
     margin-bottom: var(--mb-6);
   }
-  .home__title {
+  .home__intro {
     margin-bottom: var(--mb-5);
   }
   .home__social {
