--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,6 +57,7 @@ body {
   font-size: var(--normal-font-size);
   color: var(--second-color);
   background-color: var(--body-color);
+  transition: all 0.2s ease-in-out;
 }
 h1,
 h2,
@@ -313,7 +314,7 @@ body.dark__theme {
   padding: 0.5rem 1rem;
   margin-bottom: var(--mb-2);
   border-radius: 0.5rem;
-  box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   text-align: left;
   background-color: var(--container-color);
 }
@@ -355,6 +356,13 @@ body.dark__theme {
 .project__container,
 .work__container {
   margin-top: var(--mb-4);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background: var(--container-color);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  padding: 1em;
 }
 
 /* ===== FOOTER =====*/
